# buildsystem-sandboxy

./: README.md
autotools/: .gitignore
autotools/basic-fsm/: Makefile.am  autogen.sh  configure.ac  nouns.lexc
autotools/helloc/: Makefile.am  configure.ac  hello.c
bazel/helloc/main/: BUILD
cmake/helloc/: CMakeLists.txt  config.h.in
make/basic-fsm/: Makefile  root.lexc
meson/helloc/: meson.build
ninja/basic-fsm/: build.ninja  morphographemics.twolc
ninja/helloc/: build.ninja
